// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Custom/Inheritance base button 1`] = `
<storybook-wrapper>
  <storybook-base-button
    ng-reflect-label="this is label"
  >
    <button>
      this is label
    </button>
  </storybook-base-button>
</storybook-wrapper>
`;

exports[`Storyshots Custom/Inheritance icon button 1`] = `
<storybook-wrapper>
  <storybook-icon-button
    ng-reflect-icon="this is icon"
  >
    <button>
      this is label - this is icon
    </button>
  </storybook-icon-button>
</storybook-wrapper>
`;
